Mark flags_demo testonly (#20369)
Signed-off-by: Letu Ren <fantasquex@gmail.com>

--- a/runtime/src/iree/base/internal/BUILD.bazel
+++ b/runtime/src/iree/base/internal/BUILD.bazel
@@ -164,6 +164,7 @@ iree_runtime_cc_library(
 
 iree_runtime_cc_binary(
     name = "flags_demo",
+    testonly = True,
     srcs = ["flags_demo.c"],
     deps = [
         ":flags",
