Add HIP data-tiling resolver to e2e encoding.mlir tests. (#20416)
Otherwise, the encodings are dropped because there are no resolvers.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/encoding/BUILD.bazel
+++ b/tests/e2e/encoding/BUILD.bazel
@@ -18,6 +18,7 @@ iree_check_single_backend_test_suite(
     srcs = ["encoding.mlir"],
     compiler_flags = [
         "--iree-global-opt-experimental-rocm-data-tiling",
+        "--iree-hip-encoding-layout-resolver=data-tiling",
     ],
     driver = "hip",
     target_backend = "rocm",
