[Preprocessing] Add op for matching dimension bounds (#20502)
Currently there is only support for matching static shapes and dimension
alignment. This allows matching ops based on some minimum/maximum size
for problem shape sensitive strategies.

--- a/compiler/src/iree/compiler/Preprocessing/TransformExtensions/BUILD.bazel
+++ b/compiler/src/iree/compiler/Preprocessing/TransformExtensions/BUILD.bazel
@@ -66,5 +66,6 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:TransformDialect",
         "@llvm-project//mlir:TransformDialectInterfaces",
         "@llvm-project//mlir:TransformUtils",
+        "@llvm-project//mlir:ValueBoundsOpInterface",
     ],
 )
