[tuner] expose python binding for getting the tuner root ops (#20438)
This PR adds a Python binding to retrieve the root operation of a
dispatch for tuning purposes. However, it still relies on the `root_op`
attribute.

With this change, the tuner can easily obtain root operations using the
Python binding as shown below:
```python
root_op_list = iree_codegen.get_tuner_root_ops(input_module)
```

---------

Signed-off-by: Bangtian Liu <liubangtian@gmail.com>

--- a/compiler/bindings/python/test/api/CMakeLists.txt
+++ b/compiler/bindings/python/test/api/CMakeLists.txt
@@ -17,3 +17,10 @@ iree_py_test(
   SRCS
     "output_buffer_reference_test.py"
 )
+
+iree_py_test(
+  NAME
+    tuner_api_test
+  SRCS
+    "tuner_api_test.py"
+)
