Adding a memref linearizer pass (#20335)
This PR responds to https://github.com/iree-org/iree/issues/20226

This PR is based on the GPU/DecomposeMemRefs pass in upstream, with the
following changes:
* support vector dialect ops
* instead of decompose memrefs to rank-0 memrefs, flatten higher-ranked
memrefs to rank-1.

Notes:
* After the linearization, a MemRef's offset is kept, so a
`memref<4x8xf32, strided<[8, 1], offset: 100>>` becomes `memref<32xf32,
strided<[1], offset: 100>>`.
* also works with dynamic shapes and strides and offsets.
* shape of the casted memref is computed as 1d, flattened, with size
calculated as `outmostStride * outmostDimSize`.

---------

Signed-off-by: Alan Li <me@alanli.org>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -112,6 +112,7 @@ iree_compiler_cc_library(
         "EraseHALDescriptorTypeFromMemRef.cpp",
         "ExtractAddressComputation.cpp",
         "FlattenMemRefSubspanPass.cpp",
+        "FlattenMemRefs.cpp",
         "FoldAffineMinInDistributedLoops.cpp",
         "FoldTensorExtractOpPass.cpp",
         "FoldTensorSubsetIntoVectorTransferOps.cpp",
