--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -38,6 +38,7 @@ iree_lit_test_suite(
             "decompose_boundary_pack_unpack_ops.mlir",
             "decompose_conv2d.mlir",
             "decompose_linalg_generic.mlir",
+            "decompose_memref.mlir",
             "decompose_pack_unpack_ops.mlir",
             "decompose_softmax.mlir",
             "eliminate_empty_tensors.mlir",
