[LinalgExt] Share FFT rewriting between Torch and StableHLO (#19226)
Take FFT rewriting code out of StableHLO to LinalgExt conversion pass
and put it into a shared utility.
Implement a conversion pass for the Torch to IREE pipeline in which,
whenever the input criterion is met (size is power of 2),
`aten.fft_rfft` is converted to `linalgext.fft`. Decomposition of
`aten.fft_rfft` is disabled for the rewriting to work.

---------

Signed-off-by: Giacomo Serafini <179146510+giacs-epic@users.noreply.github.com>

--- a/compiler/bindings/python/CMakeLists.txt
+++ b/compiler/bindings/python/CMakeLists.txt
@@ -159,7 +159,7 @@ if(IREE_INPUT_TORCH)
 
   declare_mlir_python_sources(IREEPythonSources.Torch.Importers
     ADD_TO_PARENT IREEPythonSources
-    ROOT_DIR "${IREE_SOURCE_DIR}/third_party/torch-mlir/python/torch_mlir"
+    ROOT_DIR "${TORCH_MLIR_ROOT_DIR}/python/torch_mlir"
     SOURCES
       extras/fx_importer.py
       extras/onnx_importer.py
