Introduce IREE_USE_SYSTEM_DEPS (#20471)
According to
https://github.com/iree-org/iree/pull/20269#issuecomment-2729963075

---------

Signed-off-by: Letu Ren <fantasquex@gmail.com>
Co-authored-by: Scott Todd <scott.todd0@gmail.com>
Co-authored-by: Marius Brehler <marius.brehler@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,11 @@ option(IREE_BUILD_SAMPLES "Builds IREE sample projects." ON)
 option(IREE_BUILD_PYTHON_BINDINGS "Builds the IREE python bindings" OFF)
 option(IREE_BUILD_TRACY "Enables building the 'iree-tracy-capture' CLI tool and includes it in runtime Python bindings." OFF)
 option(IREE_BUILD_BUNDLED_LLVM "Builds the bundled llvm-project (vs using installed)" ON)
+option(IREE_USE_SYSTEM_DEPS "Uses certain system libraries instead of building downloaded dependencies" OFF)
+
+if(IREE_USE_SYSTEM_DEPS)
+  message(WARNING "IREE_USE_SYSTEM_DEPS is on. This option is untested and may find incompatible dependencies.")
+endif()
 
 # Properties controlling version and naming of release artifacts.
 set(IREE_RELEASE_PACKAGE_SUFFIX "" CACHE STRING "Suffix to append to distributed package names")
@@ -775,13 +780,17 @@ endif()
 # Both the IREE and MLIR Python bindings require nanobind. We initialize it here
 # at the top level so that everything uses ours consistently.
 if(IREE_BUILD_PYTHON_BINDINGS)
-  include(FetchContent)
-  FetchContent_Declare(
-    nanobind
-    GIT_REPOSITORY https://github.com/wjakob/nanobind.git
-    GIT_TAG        0f9ce749b257fdfe701edb3cf6f7027ba029434a # v2.4.0
-  )
-  FetchContent_MakeAvailable(nanobind)
+  if(IREE_USE_SYSTEM_DEPS)
+    find_package(nanobind REQUIRED)
+  else()
+    include(FetchContent)
+    FetchContent_Declare(
+        nanobind
+        GIT_REPOSITORY https://github.com/wjakob/nanobind.git
+        GIT_TAG        0f9ce749b257fdfe701edb3cf6f7027ba029434a # v2.4.0
+    )
+    FetchContent_MakeAvailable(nanobind)
+  endif()
 endif()
 
 if(NOT IREE_BUILD_COMPILER)
