Move LinalgExt::SortOp to LLVMGPUTileAndFuse pipeline (#20358) (#20411)
The LinalgExt::SortOp is one of several ops that are handled by
LLVMGPUDistribute. This pipeline mismanages thread distribution
resulting in racing memory accesses which are causing certain tests to
become flaky. So this op is being moved to the more robust
LLVMGPUTileAndFuse pipeline.

---------

Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/CMakeLists.txt
@@ -21,6 +21,7 @@ iree_lit_test_suite(
     "config_horizontally_fused_ops.mlir"
     "config_matvec.mlir"
     "config_root_op_attribute.mlir"
+    "config_sort.mlir"
     "config_winograd.mlir"
     "configure_tensor_layout.mlir"
     "conv_pipeline_test_cuda.mlir"
@@ -51,6 +52,7 @@ iree_lit_test_suite(
     "reduction_pipeline_softmax_rocm.mlir"
     "reuse_shared_memory_allocs.mlir"
     "rocdl_pipeline_test.mlir"
+    "sort_pipeline_test.mlir"
     "tensor_pad.mlir"
     "tensorcore_vectorization.mlir"
     "test_query_mma.mlir"
