--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/BUILD.bazel
@@ -32,6 +32,7 @@ iree_lit_test_suite(
             "config_horizontally_fused_ops.mlir",
             "config_matvec.mlir",
             "config_root_op_attribute.mlir",
+            "config_sort.mlir",
             "config_winograd.mlir",
             "extract_address_computation_gpu.mlir",
             "gpu_set_num_workgroups.mlir",
@@ -54,6 +55,7 @@ iree_lit_test_suite(
             "pack_shared_memory_alloc.mlir",
             "prefetch_shared_memory.mlir",
             "promote_matmul_to_fit_mma.mlir",
+            "sort_pipeline_test.mlir",
             "tensor_pad.mlir",
             "tensorcore_vectorization.mlir",
             "test_query_mma.mlir",
