--- a/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
@@ -35,6 +35,7 @@ iree_compiler_cc_library(
         "HoistEncodingOps.cpp",
         "MaterializeDefaultWorkgroupCountRegion.cpp",
         "Passes.cpp",
+        "PropagateEncodings.cpp",
         "SetEncoding.cpp",
         "SinkReshapes.cpp",
         "SplitReduction.cpp",
