--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -63,6 +63,7 @@ iree_lit_test_suite(
             "link_tuning_specs.mlir",
             "llvmcpu_materialize_encoding.mlir",
             "lower_ukernel_to_calls.mlir",
+            "lowering_config_interpreter.mlir",
             "materialize_encoding_into_nop.mlir",
             "materialize_encoding_into_padding.mlir",
             "materialize_tuning_specs.mlir",
@@ -110,6 +111,7 @@ iree_lit_test_suite(
         exclude = [
             "batch_matmul_match_spec.mlir",
             "convolution_match_spec.mlir",
+            "external_strategy_spec.mlir",
             "reductions_codegen_spec.mlir",
             "reductions_match_spec.mlir",
             "tuning_spec.mlir",
@@ -122,6 +124,7 @@ iree_lit_test_suite(
     data = [
         "batch_matmul_match_spec.mlir",
         "convolution_match_spec.mlir",
+        "external_strategy_spec.mlir",
         "reductions_codegen_spec.mlir",
         "reductions_match_spec.mlir",
         "tuning_spec.mlir",
