--- a/compiler/src/iree/compiler/Dialect/Util/TransformOps/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Util/TransformOps/BUILD.bazel
@@ -59,8 +59,10 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/Utils",
         "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:BytecodeWriter",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:PDLDialect",
+        "@llvm-project//mlir:Parser",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TransformDialect",
         "@llvm-project//mlir:TransformDialectInterfaces",
