[Codegen] Add op for swizzling memory accesses (#20547)
This patch introduces `iree_codegen.swizzle_hint` op which enables
swizzling accesses to a 1-d memref for better access patterns that are
difficult to represent at a higher level. The use case today is for
rotating accesses to shared memory to avoid bank conflicts.

This is designed as a generic op that takes an attribute interface to
make it easier to implement new swizzling strategies in the future for
new/different hardware and/or codegen strategies. Also by operating like
a view, this op still works with other transformations like
packing/reusing shared memory.

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -82,6 +82,7 @@ iree_lit_test_suite(
             "rematerialize_parallel_ops.mlir",
             "remove_dead_allocs.mlir",
             "remove_trivial_loops.mlir",
+            "resolve_swizzle_hints.mlir",
             "repeated_matcher_use.mlir",
             "replace_slow_min_max_ops.mlir",
             "strip_compilation_info.mlir",
