--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
@@ -52,6 +52,7 @@ iree_cc_library(
     ::LoweringConfigInterfaceGen
     ::UKernelOpsGen
     LLVMSupport
+    MLIRAffineDialect
     MLIRArithDialect
     MLIRArithUtils
     MLIRBufferizationDialect
