--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -148,6 +148,7 @@ iree_compiler_cc_library(
         "RematerializeParallelOps.cpp",
         "RemoveSingleIterationLoop.cpp",
         "ReplaceSlowMinMaxOps.cpp",
+        "ResolveSwizzleHints.cpp",
         "SplitFullPartialTransferPass.cpp",
         "StripCompilationInfoPass.cpp",
         "TensorDynamicDimAnalysis.cpp",
