[Codegen] Add option to expand subview metadata (#20591)
Excluding the metadata expansion patterns is based on the assumption
that all view like operations should fold into their producers. In
practice this isn't always possible around operations that generate fat
pointers under the hood (e.g. amdgpu.fat_raw_buffer_cast). This adds an
option to IREEExpandStridedMetadata that enables expansion so that we
only expand at the last moment when we need to.

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -58,6 +58,7 @@ iree_lit_test_suite(
             "hoist_statically_bound_allocations.mlir",
             "hoist_unrolled_vector_extract_insert_slice.mlir",
             "iree_comprehensive_bufferize.mlir",
+            "iree_expand_strided_metadata_with_subview_expansion.mlir",
             "iree_expand_strided_metadata.mlir",
             "iree_loop_invariant_code_motion.mlir",
             "link_tuning_specs.mlir",
