[GlobalOptimizations] Add a pass to simplify strided contraction-like ops (#20607)
This PR adds a pattern to manipulate generic ops which satisfy all
"contraction" conditions except for the indexing maps being projected
permutations. Namely, if the input indexing map has results of the form
`dim * cst`, this pattern will factor the original generic op into
`tensor.extract_slice + contraction linalg.generic`.

This addresses #20600 . Each of the included lit test examples were not
compiling to mfma instructions before this patch.

---------

Signed-off-by: zjgarvey <zjgarvey@gmail.com>

--- a/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
@@ -34,6 +34,7 @@ iree_lit_test_suite(
             "propagate_linalg_transpose.mlir",
             "raise_special_ops.mlir",
             "remove_zero_extent_tensors.mlir",
+            "strided_contraction_to_contraction.mlir",
             "transformation_pipeline.mlir",
             "transpose_and_decompose_concat.mlir",
             "warn_on_uninitialized_values.mlir",
