Integrate llvm/llvm-project@0c61b24 (#20630)

--- a/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
+++ b/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
@@ -20,6 +20,7 @@ iree_cc_library(
     "Diagnostics.cpp"
   DEPS
     LLVMSupport
+    LLVMTargetParser
     MLIRBuiltinToLLVMIRTranslation
     MLIRBytecodeWriter
     MLIRCAPIIR
