[AMDGPU] Optimize masked transfer read in presence of fat raw buffers (#20604)
Adds a pattern that makes use of the out-of-bounds handling provided by
raw fat buffers in cases of all ones or all zero masks. This pattern
prevents elementwise selection code that otherwise gets generated when
we lower the masked transfer read to load + (elementwise) select. Note
that this pattern needs to run after bufferization but before
optimizations such as `OptimizeVectorTransferPass` run as they add
vector.extracts between the mask and the read making running such an
optimization harder.

---------

Signed-off-by: Nirvedh <nirvedh@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
@@ -108,6 +108,7 @@ iree_compiler_cc_library(
         "LLVMGPUVectorToGPU.cpp",
         "Passes.cpp",
         "ROCDLAnnotateKernelForTranslation.cpp",
+        "ROCDLBufferInstructionsOptimization.cpp",
         "ROCDLConfigureBufferInstructions.cpp",
         "ROCDLKernelConfig.cpp",
         "ROCDLLowerExecutableTarget.cpp",
