--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
@@ -19,6 +19,7 @@ iree_lit_test_suite(
     srcs = enforce_glob(
         [
             "annotate_kernel_for_translation.mlir",
+            "buffer_instructions_optimization.mlir",
             "config_igemm_tile_and_fuse.mlir",
             "config_tile_and_fuse.mlir",
             "config_vector_distribute_gfx1100.mlir",
