[build] Fix Bazel dependencies for shared library builds (#20596)
This brings in several fixes for dynamic library builds by listing the
dependencies explicitly. ATM there's no good way to regression-test
this, as the bazel config is only being checked statically, and the
CMake path seems to resolve the missing deps under the hood. That said,
keeping up with all the dependencies explicitly is a good practice from
a Bazel standpoint anyway.

---------

Signed-off-by: Artem Gindinson <gindinson@roofline.ai>

--- a/compiler/src/iree/compiler/API/BUILD.bazel
+++ b/compiler/src/iree/compiler/API/BUILD.bazel
@@ -29,7 +29,9 @@ iree_compiler_cc_library(
     name = "StaticImpl",
     deps = [
         "//compiler/src/iree/compiler/API/Internal:CompilerDriver",
+        "//compiler/src/iree/compiler/API/Internal:IREECodegenDialectCAPI",
         "//compiler/src/iree/compiler/API/Internal:IREECompileToolEntryPoint",
+        "//compiler/src/iree/compiler/API/Internal:IREEGPUDialectCAPI",
         "//compiler/src/iree/compiler/API/Internal:IREEMLIRLSPServerToolEntryPoint",
         "//compiler/src/iree/compiler/API/Internal:IREEOptToolEntryPoint",
         "//compiler/src/iree/compiler/API/Internal:IREEReduceToolEntryPoint",
