[docs] Add TensorExt dialect (#20669)
Preview:
https://jtuyls.github.io/iree/reference/mlir-dialects/TensorExt/

---------

Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/docs/website/mkdocs.yml
+++ b/docs/website/mkdocs.yml
@@ -182,6 +182,7 @@ nav:
               - IREEVectorExt: "reference/mlir-dialects/IREEVectorExt.md"
               - LinalgExt: "reference/mlir-dialects/LinalgExt.md"
               - Stream: "reference/mlir-dialects/Stream.md"
+              - TensorExt: "reference/mlir-dialects/TensorExt.md"
               - Util: "reference/mlir-dialects/Util.md"
               - VM: "reference/mlir-dialects/VM.md"
               - VMVX: "reference/mlir-dialects/VMVX.md"
