[Encoding] Add interfaces for encoding propagation (#20567)
Adds attribute and op interface for encoding propagation. The attribute
interface generates new encoding attributes for the operand and result
of the operation whereas the op interface is responsible for propagation
of the encoding i.e., create new set_encoding ops and update operations.
Design doc by @hanhanW
https://hackmd.io/@hwPnnvLBTB-JGVMeh-bCEA/SkKbbnXiJl
This commit moves from rewrite pattern to interfaces, and the tests here
https://github.com/iree-org/iree/blob/main/compiler/src/iree/compiler/DispatchCreation/test/propagate_encodings.mlir
are verified.

--- a/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
@@ -42,6 +42,7 @@ iree_compiler_cc_library(
         "EncodingDialect.cpp.inc",
         "EncodingEnums.cpp.inc",
         "EncodingInterfaces.cpp.inc",
+        "EncodingOpInterfaces.cpp.inc",
         "EncodingOps.cpp",
         "EncodingOps.cpp.inc",
         "EncodingTypeInterfaces.cpp.inc",
@@ -54,6 +55,7 @@ iree_compiler_cc_library(
         "EncodingDialect.h.inc",
         "EncodingEnums.h.inc",
         "EncodingInterfaces.h.inc",
+        "EncodingOpInterfaces.h.inc",
         "EncodingOps.h",
         "EncodingOps.h.inc",
         "EncodingTypeInterfaces.h.inc",
@@ -145,6 +147,14 @@ iree_gentbl_cc_library(
         (
             ["--gen-type-interface-defs"],
             "EncodingTypeInterfaces.cpp.inc",
+        ),
+        (
+            ["--gen-op-interface-decls"],
+            "EncodingOpInterfaces.h.inc",
+        ),
+        (
+            ["--gen-op-interface-defs"],
+            "EncodingOpInterfaces.cpp.inc",
         ),
     ],
     tblgen = "@llvm-project//mlir:mlir-tblgen",
