--- a/compiler/src/iree/compiler/ExternalInterfaces/BUILD.bazel
+++ b/compiler/src/iree/compiler/ExternalInterfaces/BUILD.bazel
@@ -15,6 +15,7 @@ package(
 iree_compiler_cc_library(
     name = "ExternalModels",
     srcs = [
+        "EncodingExternalModels.cpp",
         "HALExternalModels.cpp",
         "Interfaces.cpp",
         "LinalgExtExternalModels.cpp",
@@ -23,6 +24,7 @@ iree_compiler_cc_library(
         "UtilExternalModels.cpp",
     ],
     hdrs = [
+        "EncodingExternalModels.h",
         "HALExternalModels.h",
         "Interfaces.h",
         "LinalgExtExternalModels.h",
@@ -40,6 +42,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/Stream/IR",
         "//compiler/src/iree/compiler/Dialect/TensorExt/IR",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
+        "@llvm-project//llvm:Support",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:GPUDialect",
         "@llvm-project//mlir:IR",
