Move ASM to the end of languages list in CMakeLists.txt (#19781)
This allows CMake to check whether the C/C++ compiler can compile ASM.

As per the documetation of CMake
([`project`](https://cmake.org/cmake/help/latest/command/project.html),
[`enable_language`](https://cmake.org/cmake/help/latest/command/enable_language.html)):

> If enabling `ASM`, list it last so that CMake can check whether
compilers for other languages like `C` work for assembly too.

For more information see [CMake issue
#17532](https://gitlab.kitware.com/cmake/cmake/-/issues/17532).

Signed-off-by: Javier Dehesa <javidcf@gmail.com>
Co-authored-by: Ben Vanik <ben.vanik@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,11 @@ endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(IREE ASM C CXX)
+# NOTE: ASM is at the end of the list so CMake can test whether the C/CXX
+# compilers can be used for assembly.
+# See: https://cmake.org/cmake/help/latest/command/project.html#options
+project(IREE C CXX ASM)
+
 # If we find that the cache contains CMAKE_CXX_STANDARD it means that it's a old CMakeCache.txt
 # and we can just inform the user and then reset it.
 if(DEFINED CACHE{CMAKE_CXX_STANDARD})
