Add MathToROCDL patterns in ConvertToROCLPass. (#20684)
Fixes #19994 (this is that with @krzysz00's feedback applied).

---------

Signed-off-by: Benoit Jacob <jacob.benoit.1@gmail.com>
Co-authored-by: Benoit Jacob <jacob.benoit.1@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
@@ -141,6 +141,7 @@ iree_cc_library(
     MLIRLinalgTransforms
     MLIRMathDialect
     MLIRMathToLLVM
+    MLIRMathToROCDL
     MLIRMemRefDialect
     MLIRMemRefToLLVM
     MLIRMemRefTransforms
