[Codegen] Add pass to bufferize dispatch.tensor.load/store ops (#20627)
Adds a pass to bufferize all `iree_tensor_ext.dispatch.tensor.load` and
`iree_tensor_ext.dispatch.tensor.store` ops into
`iree_codegen.load_from_memref` and `iree_codegen.store_to_memref` ops,
respectively. The `hal.interface.subspan` producer ops of the dispatch
tensor ops are bufferized normally, and then the dispatch tensor ops are
converted into the respective iree_codegen ops, with `memref.subview`
ops on the subspan memrefs to account for slice semantics of the
dispatch tensor ops.

This transformation enables new transformations at the edges of
dispatches that require memref semantics.

---------

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -91,6 +91,7 @@ iree_compiler_cc_library(
         "BubbleUpOrdinalOps.cpp",
         "BufferizationAnalysis.cpp",
         "BufferizeCopyOnlyDispatchesPass.cpp",
+        "BufferizeDispatchTensorLoadStore.cpp",
         "CleanupBufferAllocViewPass.cpp",
         "ConcretizePadResultShape.cpp",
         "ConfigTrackingCanonicalizer.cpp",
