Properly handle unaligned refs in VM ABI marshaling. (#20671)
`iree_vm_ref_*` functions have been updated to handle unaligned ref
pointers. The changes do not significantly change the code and allow for
the ABI marshaling to remain simple.

Tests were added to verify the ABI size calculations match expectations.
A bug was fixed in padding of i64/f64 argument registers on external
calls both in the compiler and runtime.

Fixes #20663.

--- a/runtime/src/iree/vm/BUILD.bazel
+++ b/runtime/src/iree/vm/BUILD.bazel
@@ -108,6 +108,18 @@ iree_runtime_cc_test(
 )
 
 iree_runtime_cc_test(
+    name = "module_test",
+    srcs = ["module_test.cc"],
+    deps = [
+        ":cc",
+        ":impl",
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
+iree_runtime_cc_test(
     name = "native_module_test",
     srcs = ["native_module_test.cc"],
     deps = [
